fixed titles getting cut off on schedule on mobile

--- a/styles/live.css
+++ b/styles/live.css
@@ -365,6 +365,11 @@ a.anchor {
   color: #ffd58a;
 }
 
+.fc-title {
+  overflow-wrap: break-word;
+  hyphens: auto;
+}
+
 #faq {
   margin-bottom: 0;
 }
